--- a/index.html
+++ b/index.html
@@ -3,8 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <title>Flutter Web</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183466876653736" crossorigin="anonymous"></script>
 </head>
 <body>
-  <script src="main.dart.js" type="application/javascript"></script>
+<script src="main.dart.js" type="application/javascript"></script>
+<script type="text/javascript">
+  function seoNameJS(name, content) {
+    if(document.querySelector("[name='"+name+"']") !== null) {
+      document.querySelector("[name='"+name+"']").remove();
+    }
+    var meta = document.createElement('meta');
+    meta.setAttribute('name', name);
+    meta.setAttribute('content', content);
+    document.getElementsByTagName('head')[0].appendChild(meta);
+  }
+
+  function seoPropertyJS(property, content) {
+    if(document.querySelector("[property='"+property+"']") !== null) {
+      document.querySelector("[property='"+property+"']").remove();
+    }
+    var meta = document.createElement('meta');
+    meta.setAttribute('property', property);
+    meta.setAttribute('content', content);
+    document.getElementsByTagName('head')[0].appendChild(meta);
+  }
+
+  function seoAttributeJS(key, val) {
+    if(document.querySelector("[name='"+key+"']") !== null) {
+      document.querySelector("[name='"+key+"']").remove();
+    }
+    var meta = document.createElement('meta');
+    meta.setAttribute(key, val);
+    document.getElementsByTagName('head')[0].appendChild(meta);
+  }
+
+</script>
 </body>
 </html>
